--- a/configs/imagenet_LFQGAN.yaml
+++ b/configs/imagenet_LFQGAN.yaml
@@ -33,11 +33,11 @@ data:
     train:
       target: taming.data.custom.CustomTrain
       params:
-        training_images_list_file: /home/jqi/Github/taming-transformers/customData/train.txt
+        training_images_list_file: ~/Github/taming-transformers/customData/train.txt
         size: 256
     validation:
       target: taming.data.custom.CustomTest
       params:
-        test_images_list_file: /home/jqi/Github/taming-transformers/customData/test.txt
+        test_images_list_file: ~/Github/taming-transformers/customData/test.txt
         size: 256
 
